WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23914
Overflow broken with accelerated compositing on leaves demo
https://bugs.webkit.org/show_bug.cgi?id=23914
Summary
Overflow broken with accelerated compositing on leaves demo
Simon Fraser (smfr)
Reported
2009-02-11 21:48:32 PST
Overflow:hidden is not working in the leaves demo with accelerated compositing on.
Attachments
Patch, testcases, changelog
(19.61 KB, patch)
2009-03-25 18:08 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-12 11:51:56 PDT
***
Bug 24401
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 2
2009-03-25 18:08:00 PDT
Created
attachment 28957
[details]
Patch, testcases, changelog
Dave Hyatt
Comment 3
2009-03-26 10:14:26 PDT
Comment on
attachment 28957
[details]
Patch, testcases, changelog r=me
Simon Fraser (smfr)
Comment 4
2009-03-26 11:34:40 PDT
http://trac.webkit.org/changeset/42009
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug